debug logs, locale, name conflict
* added debug logs to notify the user about the conversion progress
* fixed vertex/normals/uvs being locale dependent (. vs , decimal separators)
* if the conversion folder already exists, it will create a new one with "(n)" in the end